--- a/week_2/task_4/index.html
+++ b/week_2/task_4/index.html
@@ -11,7 +11,7 @@
 <script src="https://cdn.tailwindcss.com"></script>
 
 
-<nav class="nav-bar bg-gray-800 text-white p-4  ">
+<nav class="nav-bar bg-gray-800 text-white p-4 text-xl sm:text-4xl md:text-2xl ">
     <div class="nav-item">Home</div>
     <div class="nav-item">About</div>
     <div class="nav-item">Contact</div>
@@ -19,8 +19,8 @@
 
 <div class="card-wrapper flex justify-center items-center h-[calc(100vh-7vh)] ">
     <div class="card bg-white p-8 rounded-xl shadow-lg text-center">
-        <h2 class="text-2xl font-bold mb-2 p-5  ">FLexbox card</h2>
-<p class="text-gray-600">This card is centered using Flexbox.</p>
+        <h2 class="text-6xl xl:text-4xl font-bold mb-2 p-5  ">FLexbox card</h2>
+<p class="text-gray-600  text-2xl xl:text-lg  ">This card is centered using Flexbox.</p>
     </div>
 
    
